enable nginx modules for downstream

--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -1,6 +1,9 @@
+## Version 2018/08/16 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf
+
 user abc;
 worker_processes 4;
 pid /run/nginx.pid;
+include /etc/nginx/modules/*.conf;
 
 events {
 	worker_connections 768;
@@ -70,7 +73,8 @@ http {
 	# Virtual Host Configs
 	##
 	include /etc/nginx/conf.d/*.conf;
-        include /config/nginx/site-confs/*;
+	include /config/nginx/site-confs/*;
+  
 }
 
 
