Match pid file location from alpine package manager
commands like nginx -s reload wouldn't work to apply changes without starting the docker. https://git.alpinelinux.org/cgit/aports/tree/main/nginx/nginx.initd

--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -1,8 +1,8 @@
-## Version 2018/08/16 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf
+## Version 2018/12/21 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf
 
 user abc;
 worker_processes 4;
-pid /run/nginx.pid;
+pid /run/nginx/nginx.pid;
 include /etc/nginx/modules/*.conf;
 
 events {
