Auto number of worker processes, and default number of connections
This allows NGINX to better take advantage of multiple cores.

--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -1,12 +1,12 @@
 ## Version 2018/08/16 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf
 
 user abc;
-worker_processes 4;
+worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules/*.conf;
 
 events {
-	worker_connections 768;
+	worker_connections 1024;
 	# multi_accept on;
 }
 
