--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -1,7 +1,7 @@
 ## Version 2018/08/16 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf
 
 user abc;
-worker_processes 4;
+worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules/*.conf;
 
