--- a/.github/workflows/package_trigger.yml
+++ b/.github/workflows/package_trigger.yml
@@ -12,11 +12,11 @@ jobs:
       - name: Package Trigger
         if: github.ref == 'refs/heads/3.11'
         run: |
-          if [ -n "${{ secrets.PAUSE_PACKAGE_TRIGGER_BASEIMAGE_ALPINE_NGINX_3.11 }}" ]; then
-            echo "Github secret PAUSE_PACKAGE_TRIGGER_BASEIMAGE_ALPINE_NGINX_3.11 is set; skipping trigger."
+          if [ -n "${{ secrets.PAUSE_PACKAGE_TRIGGER_BASEIMAGE_ALPINE_NGINX_3_11 }}" ]; then
+            echo "Github secret PAUSE_PACKAGE_TRIGGER_BASEIMAGE_ALPINE_NGINX_3_11 is set; skipping trigger."
             exit 0
           fi
-          echo "Package trigger running off of 3.11 branch. To disable, set a Github secret named \"PAUSE_PACKAGE_TRIGGER_BASEIMAGE_ALPINE_NGINX_3.11\"."
+          echo "Package trigger running off of 3.11 branch. To disable, set a Github secret named \"PAUSE_PACKAGE_TRIGGER_BASEIMAGE_ALPINE_NGINX_3_11\"."
           curl -X POST \
             https://ci.linuxserver.io/job/Docker-Pipeline-Builders/job/docker-baseimage-alpine-nginx/job/3.11/buildWithParameters?PACKAGE_CHECK=true \
             --user ${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_TOKEN }}
