--- a/.github/workflows/external_trigger.yml
+++ b/.github/workflows/external_trigger.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  external-trigger-3.11:
+  external-trigger-3-11:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.3
