--- a/.github/workflows/external_trigger_scheduler.yml
+++ b/.github/workflows/external_trigger_scheduler.yml
@@ -15,16 +15,18 @@ jobs:
         
       - name: External Trigger Scheduler
         run: |
+          echo "**** Branches found: ****"
           git for-each-ref --format='%(refname:short)' refs/remotes
+          echo "**** Pulling the yq docker image ****"
           docker pull ghcr.io/linuxserver/yq
           for br in $(git for-each-ref --format='%(refname:short)' refs/remotes)
           do
             br=$(echo "$br" | sed 's|origin/||g')
-            echo "Evaluating branch ${br}"
+            echo "**** Evaluating branch ${br} ****"
             ls_branch=$(curl -sX GET https://raw.githubusercontent.com/linuxserver/docker-baseimage-alpine-nginx/${br}/jenkins-vars.yml \
               | docker run --rm -i --entrypoint yq ghcr.io/linuxserver/yq -r .ls_branch)
             if [ "$br" == "$ls_branch" ]; then
-              echo "${br} is a live branch, checking workflow."
+              echo "**** Branch ${br} appears to be live; checking workflow. ****"
               if curl -sfX GET https://raw.githubusercontent.com/linuxserver/docker-baseimage-alpine-nginx/${br}/.github/workflows/external_trigger.yml > /dev/null 2>&1; then
                 echo "Workflow exists. Triggering external trigger workflow for branch ${br}."
                 curl -iX POST \
@@ -33,9 +35,9 @@ jobs:
                   -d "{\"ref\":\"refs/heads/${br}\"}" \
                   https://api.github.com/repos/linuxserver/docker-baseimage-alpine-nginx/actions/workflows/external_trigger.yml/dispatches
               else
-                echo "Workflow doesn't exist; skipping trigger."
+                echo "**** Workflow doesn't exist; skipping trigger. ****"
               fi
             else
-              echo "${br} appears to be a dev branch; skipping trigger."
+              echo "**** ${br} appears to be a dev branch; skipping trigger. ****"
             fi
           done
