--- a/.github/workflows/package_trigger_scheduler.yml
+++ b/.github/workflows/package_trigger_scheduler.yml
@@ -15,18 +15,20 @@ jobs:
         
       - name: Package Trigger Scheduler
         run: |
+          echo "**** Branches found: ****"
           git for-each-ref --format='%(refname:short)' refs/remotes
+          echo "**** Pulling the yq docker image ****"
           docker pull ghcr.io/linuxserver/yq
           for br in $(git for-each-ref --format='%(refname:short)' refs/remotes)
           do
             br=$(echo "$br" | sed 's|origin/||g')
-            echo "Evaluating branch ${br}"
+            echo "**** Evaluating branch ${br} ****"
             ls_branch=$(curl -sX GET https://raw.githubusercontent.com/linuxserver/docker-baseimage-alpine-nginx/${br}/jenkins-vars.yml \
               | docker run --rm -i --entrypoint yq ghcr.io/linuxserver/yq -r .ls_branch)
             if [ "${br}" == "${ls_branch}" ]; then
-              echo "Branch ${br} appears to be live; triggering."
+              echo "**** Branch ${br} appears to be live; checking workflow. ****"
               if curl -sfX GET https://raw.githubusercontent.com/linuxserver/docker-baseimage-alpine-nginx/${br}/.github/workflows/package_trigger.yml > /dev/null 2>&1; then
-                echo "Workflow exists. Triggering package trigger workflow for branch ${br}."
+                echo "**** Workflow exists. Triggering package trigger workflow for branch ${br}. ****"
                 curl -iX POST \
                   -H "Authorization: token ${{ secrets.CR_PAT }}" \
                   -H "Accept: application/vnd.github.v3+json" \
@@ -34,9 +36,9 @@ jobs:
                   https://api.github.com/repos/linuxserver/docker-baseimage-alpine-nginx/actions/workflows/package_trigger.yml/dispatches
                 sleep 30
               else
-                echo "Workflow doesn't exist; skipping trigger."
+                echo "**** Workflow doesn't exist; skipping trigger. ****"
               fi
             else
-              echo "${br} appears to be a dev branch; skipping trigger."
+              echo "**** ${br} appears to be a dev branch; skipping trigger. ****"
             fi
           done
