--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -3,9 +3,9 @@
 # jenkins variables
 project_name: docker-baseimage-alpine-nginx
 external_type: os
-release_type: stable
-release_tag: "3.13"
-ls_branch: master
+release_type: prerelease
+release_tag: "3.13-php8"
+ls_branch: 3.13-php8
 repo_vars:
   - BUILD_VERSION_ARG = 'OS'
   - LS_USER = 'linuxserver'
