enable brotli compression in nginx defaults

--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -53,6 +53,16 @@ http {
 	# gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 	##
+	# brotli Settings
+	##
+
+	brotli on;
+
+	# brotli_comp_level 5;
+	# brotli_static on;
+	# brotli_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml application/x-font-ttf image/vnd.microsoft.icon application/x-font-opentype font/eot application/vnd.ms-fontobject application/javascript font/otf application/xhtml+xml application/x-font-truetype image/x-icon font/opentype image/x-win-bitmap;
+
+	##
 	# nginx-naxsi config
 	##
 	# Uncomment it if you installed nginx-naxsi
