Update nginx.conf for reverse proxy use
For services deployed behind reverse proxies (Traefik, SWAG, etc.), the access log will only show the IP of the proxy, making implementing fail2ban controls impossible.  This change adds $x_forwarded_for to the access log, so that it can be used.

--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -35,7 +35,11 @@ http {
 	# Logging Settings
 	##
 
-	access_log /config/log/nginx/access.log;
+	log_format proxy '$remote_addr - $remote_user [$time_local] '
+		'"$request" $status $body_bytes_sent '
+		'"$http_referer" "$http_user_agent" "$x_forwarded_for"';
+
+	access_log /config/log/nginx/access.log proxy;
 	error_log /config/log/nginx/error.log;
 
 	##
