--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -1,4 +1,7 @@
-## Version 2021/10/05 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf
+## Version 2021/10/14 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf
+
+### Based on alpine defaults
+# https://git.alpinelinux.org/aports/tree/main/nginx/nginx.conf?h=3.14-stable
 
 user abc;
 
@@ -14,11 +17,14 @@ error_log /config/log/nginx/error.log;
 # Includes files with directives to load dynamic modules.
 include /etc/nginx/modules/*.conf;
 
+# Uncomment to include files with config snippets into the root context.
+# NOTE: This will be enabled by default in Alpine 3.15.
+#include /etc/nginx/conf.d/*.conf;
+
 events {
     # The maximum number of simultaneous connections that can be opened by
     # a worker process.
     worker_connections 1024;
-    # multi_accept on;
 }
 
 http {
@@ -49,79 +55,39 @@ http {
     # instead of using partial frames. Default is 'off'.
     tcp_nopush on;
 
-    # Helper variable for proxying websockets.
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
-    }
+	# Enable gzipping of responses.
+	#gzip on;
 
-    # Sets the path, format, and configuration for a buffered log write.
-    access_log /config/log/nginx/access.log;
-
-    # Includes virtual hosts configs.
-    #include /etc/nginx/http.d/*.conf;
-
-    # WARNING: Don't use this directory for virtual hosts anymore.
-    # This include will be moved to the root context in Alpine 3.14.
-    #include /etc/nginx/conf.d/*.conf;
+	# Set the Vary HTTP header as defined in the RFC 2616. Default is 'off'.
+	gzip_vary on;
 
 
-    ##
-    # Basic Settings
-    ##
+	# Helper variable for proxying websockets.
+	map $http_upgrade $connection_upgrade {
+		default upgrade;
+		'' close;
+	}
 
-    client_body_buffer_size 128k;
-    keepalive_timeout 65;
-    large_client_header_buffers 4 16k;
-    send_timeout 5m;
-    tcp_nodelay on;
-    types_hash_max_size 2048;
-    variables_hash_max_size 2048;
-    # server_names_hash_bucket_size 64;
-    # server_name_in_redirect off;
+	# Sets the path, format, and configuration for a buffered log write.
+	access_log /config/log/nginx/access.log;
 
-    ##
-    # Gzip Settings
-    ##
+    ### Linuxserver.io Defaults
 
-    gzip on;
-    gzip_disable "msie6";
-    # gzip_vary on;
-    # gzip_proxied any;
-    # gzip_comp_level 6;
-    # gzip_buffers 16 8k;
-    # gzip_http_version 1.1;
-    # gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    client_body_buffer_size 128k; # default: client_body_buffer_size 8k|16k;
+    #keepalive_timeout 75s; # default: keepalive_timeout 75s;
+    large_client_header_buffers 4 16k; # default: large_client_header_buffers 4 8k;
+    send_timeout 5m; # default: send_timeout 60s;
+    #server_name_in_redirect off; # default: server_name_in_redirect off;
+    #server_names_hash_bucket_size 64; # default: server_names_hash_bucket_size 32|64|128;
+    #tcp_nodelay on; # default: tcp_nodelay on;
+    types_hash_max_size 2048; # default: types_hash_max_size 1024;
+    variables_hash_max_size 2048; # default: variables_hash_max_size 1024;
 
-    ##
-    # nginx-naxsi config
-    ##
-    # Uncomment it if you installed nginx-naxsi
-    ##
-
-    #include /etc/nginx/naxsi_core.rules;
-
-    ##
-    # nginx-passenger config
-    ##
-    # Uncomment it if you installed nginx-passenger
-    ##
-
-    #passenger_root /usr;
-    #passenger_ruby /usr/bin/ruby;
-
-    ##
-    # Virtual Host Configs
-    ##
+	# Includes virtual hosts configs.
     include /config/nginx/site-confs/*;
     #Removed lua. Do not remove this comment
 
-    ##
-    # Geoip2 config
-    ##
     # Uncomment to add the Geoip2 configs needed to geo block countries/cities.
-    ##
-
     #include /config/nginx/geoip2.conf;
 }
 
