move default to default.conf

--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -84,7 +84,7 @@ http {
     variables_hash_max_size 2048; # default: variables_hash_max_size 1024;
 
     # Includes virtual hosts configs.
-    include /config/nginx/site-confs/*;
+    include /config/nginx/site-confs/*.conf;
     #Removed lua. Do not remove this comment
 
     # Uncomment to add the Geoip2 configs needed to geo block countries/cities.
