Rework default.conf and ssl.conf default.conf now universally handles /app/www/public or /config/www ssl.conf now includes mozilla recommendations

--- a/root/defaults/default.conf
+++ b/root/defaults/default.conf
@@ -3,23 +3,25 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    listen 443 ssl http2 default_server;
-    listen [::]:443 ssl http2 default_server;
 
-    root /config/www;
+    set $root /app/www/public;
+    if (!-d /app/www/public) {
+        set $root /config/www;
+    }
+    root $root;
     index index.html index.htm index.php;
 
-    server_name _;
-
     # all ssl related config moved to ssl.conf
-    include /config/nginx/ssl.conf;
+    #include /config/nginx/ssl.conf;
 
-    client_max_body_size 0;
-
+    set $htpasswd_file /config/nginx/.htpasswd;
+    set $auth_basic "Restricted";
+    if (!-f $htpasswd_file) {
+        set $auth_basic off;
+    }
     location / {
-        # enable the next two lines for http auth
-        #auth_basic "Restricted";
-        #auth_basic_user_file /config/nginx/.htpasswd;
+        auth_basic $auth_basic;
+        auth_basic_user_file $htpasswd_file;
 
         try_files $uri $uri/ /index.html /index.php?$args =404;
     }
@@ -29,5 +31,10 @@ server {
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         include /etc/nginx/fastcgi_params;
+    }
+
+    # deny access to .htaccess/.htpasswd files
+    location ~ /\.ht {
+        deny  all;
     }
 }
