--- a/root/defaults/default.conf
+++ b/root/defaults/default.conf
@@ -1,4 +1,4 @@
-## Version 2021/10/14 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/default
+## Version 2021/10/24 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/default.conf
 
 server {
     listen 80 default_server;
