--- a/root/defaults/nginx/site-confs/default.conf.sample
+++ b/root/defaults/nginx/site-confs/default.conf.sample
@@ -11,8 +11,7 @@ server {
     root $root;
     index index.html index.htm index.php;
 
-    # all ssl related config moved to ssl.conf
-    #include /config/nginx/ssl.conf;
+    include /config/nginx/server-confs/*.conf;
 
     set $htpasswd_file /config/nginx/.htpasswd;
     set $auth_basic "Restricted";
