--- a/root/defaults/nginx/nginx.conf.sample
+++ b/root/defaults/nginx/nginx.conf.sample
@@ -1,7 +1,7 @@
-## Version 2022/07/23 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf.sample
+## Version 2022/08/05 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf.sample
 
 ### Based on alpine defaults
-# https://git.alpinelinux.org/aports/tree/main/nginx/nginx.conf?h=3.16-stable
+# https://git.alpinelinux.org/aports/tree/main/nginx/nginx.conf?h=3.15-stable
 
 user abc;
 
@@ -55,43 +55,8 @@ http {
     # instead of using partial frames. Default is 'off'.
     tcp_nopush on;
 
-    ### Mozilla Recommendations
-    # generated 2022-07-23, Mozilla Guideline v5.6, nginx 1.17.7, OpenSSL 1.1.1k, intermediate configuration
-    # https://ssl-config.mozilla.org/#server=nginx&version=1.17.7&config=intermediate&openssl=1.1.1k&guideline=5.6
-
-    ssl_certificate /config/keys/cert.crt;
-    ssl_certificate_key /config/keys/cert.key;
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:MozSSL:10m; # about 40000 sessions
-    ssl_session_tickets off;
-
-    # curl https://ssl-config.mozilla.org/ffdhe2048.txt > /path/to/dhparam
-    ssl_dhparam /config/nginx/dhparams.pem;
-
-    # intermediate configuration
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-
-    # HSTS (ngx_http_headers_module is required) (63072000 seconds)
-    #add_header Strict-Transport-Security "max-age=63072000" always;
-
-    # OCSP stapling
-    ssl_stapling on;
-    ssl_stapling_verify on;
-
-    # verify chain of trust of OCSP response using Root CA and Intermediate certs
-    ssl_trusted_certificate /config/keys/cert.crt;
-
-    # Optional additional headers
-    #add_header Cache-Control "no-transform" always;
-    #add_header Content-Security-Policy "upgrade-insecure-requests; frame-ancestors 'self'";
-    #add_header Permissions-Policy "interest-cohort=()";
-    #add_header Referrer-Policy "same-origin" always;
-    #add_header X-Content-Type-Options "nosniff" always;
-    #add_header X-Frame-Options "SAMEORIGIN" always;
-    #add_header X-UA-Compatible "IE=Edge" always;
-    #add_header X-XSS-Protection "1; mode=block" always;
+    # all ssl related config moved to ssl.conf
+    include /config/nginx/ssl.conf;
 
     # Enable gzipping of responses.
     #gzip on;
