--- a/root/defaults/nginx/ssl.conf.sample
+++ b/root/defaults/nginx/ssl.conf.sample
@@ -22,11 +22,11 @@ ssl_prefer_server_ciphers off;
 #add_header Strict-Transport-Security "max-age=63072000" always;
 
 # OCSP stapling
-ssl_stapling on;
-ssl_stapling_verify on;
+#ssl_stapling on;
+#ssl_stapling_verify on;
 
 # verify chain of trust of OCSP response using Root CA and Intermediate certs
-ssl_trusted_certificate /config/keys/cert.crt;
+#ssl_trusted_certificate /config/keys/cert.crt;
 
 # Optional additional headers
 #add_header Cache-Control "no-transform" always;
