--- a/root/defaults/nginx/nginx.conf.sample
+++ b/root/defaults/nginx/nginx.conf.sample
@@ -1,4 +1,4 @@
-## Version 2022/08/16 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx/nginx.conf.sample
+## Version 2023/01/14 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx/nginx.conf.sample
 
 ### Based on alpine defaults
 # https://git.alpinelinux.org/aports/tree/main/nginx/nginx.conf?h=3.15-stable
@@ -36,6 +36,11 @@ http {
     # It's also needed when using tcpsocket and udpsocket in Lua modules.
     #resolver 1.1.1.1 1.0.0.1 2606:4700:4700::1111 2606:4700:4700::1001;
     include /config/nginx/resolver.conf;
+
+    # display real ip in nginx logs when connected through reverse proxy via docker network
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
+    include /config/nginx/real_ip.conf;
 
     # Don't tell nginx version to the clients. Default is 'on'.
     server_tokens off;
