--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -2,7 +2,8 @@
 
 # jenkins variables
 project_name: docker-baseimage-alpine-nginx
-external_type: os
+external_type: na
+custom_version_command: "echo $(curl -sL http://dl-cdn.alpinelinux.org/alpine/v3.18/main/x86_64/APKINDEX.tar.gz | tar -xz -C /tmp && awk '/^P:'\"nginx\"'$/,/V:/' /tmp/APKINDEX | sed -n 2p | sed 's/^V://')_$(curl -sL http://dl-cdn.alpinelinux.org/alpine/v3.18/community/x86_64/APKINDEX.tar.gz | tar -xz -C /tmp && awk '/^P:'\"php82\"'$/,/V:/' /tmp/APKINDEX | sed -n 2p | sed 's/^V://')"
 release_type: prerelease
 release_tag: "3.18"
 ls_branch: "3.18"
