--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -3,6 +3,9 @@
 
 # project information
 project_name: baseimage-alpine-nginx
+project_deprecation_status: true
+project_deprecation_message: |
+  We recommend switching to a newer tag
 full_custom_readme: |
   {% raw -%}
   [linuxserverurl]: https://linuxserver.io
@@ -37,7 +40,7 @@ full_custom_readme: |
 
    + weekly updates
    + security updates
-   
+
   The following line is only in this repo for loop testing:
   - { date: "01.01.50:", desc: "I am the release message for this internal repo." }
   {%- endraw %}
