--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -7,6 +7,8 @@ custom_version_command: "echo $(curl -sL http://dl-cdn.alpinelinux.org/alpine/v3
 release_type: stable
 release_tag: "3.21"
 ls_branch: master
+image_sbom: true
+image_provenance: true
 repo_vars:
   - BUILD_VERSION_ARG = 'OS'
   - LS_USER = 'linuxserver'
