--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -27,17 +27,16 @@ full_custom_readme: |
   &nbsp;
   &nbsp;
 
-  [![](https://images.microbadger.com/badges/image/lsiobase/nginx.svg)](https://microbadger.com/images/lsiobase/nginx "Get your own image badge on microbadger.com")
-
-  [![](https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/Dockerfile-Link-green.png)](https://github.com/linuxserver/docker-baseimage-alpine-nginx/blob/master/Dockerfile)
+  [![](https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/Dockerfile-Link-green.png)](https://github.com/linuxserver/docker-baseimage-alpine-nginx/blob/3.20/Dockerfile)
 
   A custom base image built with [Alpine linux][appurl], [nginx][nginxurl] and [S6 overlay](https://github.com/just-containers/s6-overlay)..
 
   Featuring :-
 
-   + weekly updates
-   + security updates
-   
+  + weekly updates
+  + security updates
+
   The following line is only in this repo for loop testing:
-  - { date: "01.01.50:", desc: "I am the release message for this internal repo." }
+
+  + { date: "01.01.50:", desc: "I am the release message for this internal repo." }
   {%- endraw %}
