--- a/root/defaults/nginx/nginx.conf.sample
+++ b/root/defaults/nginx/nginx.conf.sample
@@ -1,7 +1,7 @@
-## Version 2024/12/17 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx/nginx.conf.sample
+## Version 2025/05/31 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx/nginx.conf.sample
 
 ### Based on alpine defaults
-# https://git.alpinelinux.org/aports/tree/main/nginx/nginx.conf?h=3.21-stable
+# https://git.alpinelinux.org/aports/tree/main/nginx/nginx.conf?h=3.22-stable
 
 user abc;
 
@@ -71,6 +71,9 @@ http {
 
     # Enable http2 by default for all servers
     http2 on;
+
+    http3 on;
+    quic_retry on;
 
     # Sets the path, format, and configuration for a buffered log write.
     access_log /config/log/nginx/access.log;
